--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estilos/styles.css">
 </head>
 <body>
+    <!--Creamos Header con los menus para cambiar de pantalla-->
     <header>
         <h1 id="main-title"></h1>
         <nav>
